@@ -1,1 +1,1 @@
-DIST ThisWarofMine_linux_v1.1.1.zip 1598572454 SHA256 1e81c1e895b259312f02c417d3a6f01b0e0c80d604b8515142117a9985f06f3d SHA512 b133cd055866ec0f8832f04ce6ded1d75c0644497d272965f2882c17e15fd21a70fa3a571ae01614b40ab3dc7c07f150270fbc8f2544f39fb1f911082dbae5aa WHIRLPOOL de040edd5f7ac620ce52c6ef031d179c452a5b04c1a1ad4a9f67522dcfb35e5eb490de3be9dc2ba39df07fa75160e4ba81e30f8fc39e3d76d33919db6ec311e8
+DIST ThisWarofMine1.2.tar.gz 774022882 SHA256 236b6bf062e2e7c656cfdab0835326854a7531ef139ef9500e3c2bda838d05c7 SHA512 7bbbddf0f2255807aa33664354311a9defb08e0bd3b1af744b0f209c6bcc8792beae0b9537f2034abcb6521875312dee0997a393198e2e31771fbc4a29ccae15 WHIRLPOOL dfe9de431c430a4ba75d34a14760e10bb26a949c0843936d717895bdee67923e7a2ec2a83f96136d4b60d95f9cdfb29c21986e6507b199781e87483c792d36bc
